@@ -1,3 +1,4 @@
+- Add basic support to export plots using tikzDevice
 - Fixed: cbind-value of <matrix> element was missing commas
 - Fixed: Give a label to an unlabelled toolbar
 - IN PROGESS: Allow plugins to be translated
